HW3/E-1.4.33-CheckDuplicate/wdir_msg/compile.err

CheckDuplicate.java:20: error: variable hasDuplicate is already defined in method main(String[])
                    boolean hasDuplicate = true;
                            ^
1 error


